--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,21 @@
 </div>
 
 <ng-template #fimDeJogo>
-    <div class="container" style="margin-top: 50px">
+    <div *ngIf="tipoEncerramento === 'Derrota!!!'; else fimDeJogoVitoria" class="container" style="margin-top: 50px">
         <div class="row">
             <div class="col">
                 <h3 style="color: red">Fim de jogo, você perdeu!!! :S</h3>
+                <button class="btn btn-primary" (click)="reiniciarJogo()">Jogar Novamente</button>
+            </div>
+        </div>
+    </div>
+</ng-template>
+<ng-template #fimDeJogoVitoria>
+    <div class="container" style="margin-top: 50px">
+        <div class="row">
+            <div class="col">
+                <h3 style="color: green">Fim de jogo, você Venceu!!! :D</h3>
+                <button class="btn btn-primary" (click)="reiniciarJogo()">Jogar Novamente</button>
             </div>
         </div>
     </div>
